--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -32,7 +32,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="36dp"
-        android:text="xl 3.12\nwyy 3.12\nzyf 4.1\nlcy 4.5\nldy 4.5\njy 4.26\nwj 4.16\nzrj 4.27\ntf 4.28"
+        android:text="xl 3.12\nwyy 3.12\nzyf 4.1\nlcy 4.5\nldy 4.5\njy 4.26\nwj 4.16\nzrj 4.27\ntf 4.28\nch 3.14
+\na1-a11 4.10"
         android:textSize="25dp" />
 
     <EditText
@@ -48,10 +49,10 @@
         android:id="@+id/et_deviceid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/et_devmoule"
-        android:layout_below="@+id/et_devmoule"
         android:ems="10"
-        android:inputType="textCapCharacters|textPersonName" />
+        android:inputType="textCapCharacters|textPersonName"
+        android:layout_below="@+id/et_devmoule"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/bt_first_fanyi"
