--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -32,8 +32,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="36dp"
-        android:text="xl 3.12\nwyy 3.12\nzyf 4.1\nlcy 4.5\nldy 4.5\njy 4.26\nwj 4.16\nzrj 4.27\ntf 4.28\nch 3.14
-\na1-a11 4.10"
+        android:text="xl 3.23\nwyy 3.18\nzyf 4.1\nlcy 4.5\nldy 4.5\njy 4.26\nwj 4.16\nzrj 4.27\ntf 4.28\nch 3.24
+\na1-a11 4.10\nrgd 4.5\nwl 4.10\nczx 4.4"
         android:textSize="25dp" />
 
     <EditText
